<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/bedienung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bedienung" />

    <Button
        android:id="@+id/kueche"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bedienung"
        android:layout_marginTop="20dp"
        android:text="@string/kueche" />

    <Button
        android:id="@+id/ausschank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kueche"
        android:layout_marginTop="20dp"
        android:text="@string/ausschank" />

    <Button
        android:id="@+id/einstellungen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ausschank"
        android:layout_marginTop="20dp"
        android:text="@string/einstellungen" />

</RelativeLayout>